Partial folder endpoints
